tests/ui/failing/arbitrary_self_types_raw_pointer_struct.rs.stderr
    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.03s
     Running `target/debug/stable_mir_json -Zno-codegen /home/zncv/Applications/mir-semantics-compiletest/ui/self/arbitrary_self_types_raw_pointer_struct.rs`
error[E0658]: `*const Foo` cannot be used as the type of `self` without the `arbitrary_self_types_pointers` feature
 --> /home/zncv/Applications/mir-semantics-compiletest/ui/self/arbitrary_self_types_raw_pointer_struct.rs:9:25
  |
9 |     unsafe fn foo(self: *const Self) -> *const str {
  |                         ^^^^^^^^^^^
  |
  = note: see issue #44874 <https://github.com/rust-lang/rust/issues/44874> for more information
  = help: add `#![feature(arbitrary_self_types_pointers)]` to the crate attributes to enable
  = note: this compiler was built on 2024-11-28; consider upgrading it if it is out of date
  = help: consider changing to `self`, `&self`, `&mut self`, `self: Box<Self>`, `self: Rc<Self>`, `self: Arc<Self>`, or `self: Pin<P>` (where P is one of the previous types except `Self`)

error[E0658]: `*const std::rc::Rc<Foo>` cannot be used as the type of `self` without the `arbitrary_self_types_pointers` feature
  --> /home/zncv/Applications/mir-semantics-compiletest/ui/self/arbitrary_self_types_raw_pointer_struct.rs:13:28
   |
13 |     fn complicated_1(self: *const Rc<Self>) -> &'static str {
   |                            ^^^^^^^^^^^^^^^
   |
   = note: see issue #44874 <https://github.com/rust-lang/rust/issues/44874> for more information
   = help: add `#![feature(arbitrary_self_types_pointers)]` to the crate attributes to enable
   = note: this compiler was built on 2024-11-28; consider upgrading it if it is out of date
   = help: consider changing to `self`, `&self`, `&mut self`, `self: Box<Self>`, `self: Rc<Self>`, `self: Arc<Self>`, or `self: Pin<P>` (where P is one of the previous types except `Self`)

error[E0658]: `std::rc::Rc<*const Foo>` cannot be used as the type of `self` without the `arbitrary_self_types_pointers` feature
  --> /home/zncv/Applications/mir-semantics-compiletest/ui/self/arbitrary_self_types_raw_pointer_struct.rs:17:35
   |
17 |     unsafe fn complicated_2(self: Rc<*const Self>) -> *const str {
   |                                   ^^^^^^^^^^^^^^^
   |
   = note: see issue #44874 <https://github.com/rust-lang/rust/issues/44874> for more information
   = help: add `#![feature(arbitrary_self_types_pointers)]` to the crate attributes to enable
   = note: this compiler was built on 2024-11-28; consider upgrading it if it is out of date
   = help: consider changing to `self`, `&self`, `&mut self`, `self: Box<Self>`, `self: Rc<Self>`, `self: Arc<Self>`, or `self: Pin<P>` (where P is one of the previous types except `Self`)

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0658`.
